--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
+		"react-app-context": "^1.0.6",
 		"react-dom": "^17.0.2",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2"
+		"react-router": "^6.0.2",
+		"react-router-dom": "^6.3.0"
 	}
 }
